@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 31/03/2022
-# Versão: 0.09
+# Data de atualização: 21/08/2022
+# Versão: 0.10
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do ISC DHCP Server v4.4.x
 # Testado e homologado para a versão do Bind DNS Sever v9.16.x
@@ -100,6 +100,7 @@ subnet 172.16.1.0 netmask 255.255.255.0 {
 	option routers 172.16.1.254;
 	# Endereço do DNS Server da subrede do escopo separados por vírgula
 	option domain-name-servers 172.16.1.254, 8.8.8.8, 8.8.4.4;
+	#option domain-name-servers 172.16.1.20;
 	# Endereço do NTP Server da subrede do escopo
 	option ntp-servers 172.16.1.20;
 	# Configuração do UTC-3 (São Paulo) Time Offset (segundos) da subrede do escopo
