@@ -1,4 +1,5 @@
 anonymous
 ftpuser
-glpi
+glpi9
+glpi10
 wordpress
