@@ -37,6 +37,7 @@
    # Porta Segura (8443 - HTTPS)
   -->
   <Service name="Catalina">
+    <!-- Comentar essas linhas na configuração do TLs/SSL do Apache Tomcat9 -->  
     <Connector port="8080" protocol="HTTP/1.1"
                connectionTimeout="20000"
                redirectPort="8443" />
@@ -45,6 +46,7 @@
     # e Certificados Assinados utilizando o OpenSSL
     # Comando para a geração do certificado do Tomcat9 SSL/TLS não assinado
     #	keytool -genkey -alias tomcat -keyalg RSA -keystore /etc/tomcat9/cert.jks
+	# Descomentar as linhas abaixo depois de configurar o TLS/SSL do Apache Tomcat9
     -->
     <!--	
     <Connector
